# post-trade-settlement-sim

./: Dockerfile  README.md  pyproject.toml
docs/: AGENTS.md  API_SPEC.md  ARCHITECTURE.md  ASYNC_MESSAGING.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  DOMAIN.md  INTERVIEW_NOTES.md  NON_FUNCTIONAL_REQUIREMENTS.md  RUNBOOK.md  SCENARIOS.md  SECURITY.md  TASKS.MD  TASKS.md  TEST_STRATEGY.md
infra/: docker-compose.yml
src/app/: main.py
src/app/api/: dependencies.py  middleware.py  schemas.py
src/app/api/routes/: trades.py
src/app/application/: trade_service.py
src/app/domain/: models.py
src/app/infrastructure/: config.py  db.py  logging.py
tests/: conftest.py
tests/integration/: test_submit_trade.py
tests/unit/: test_idempotency.py  test_validation.py
tools/: codex_portfolio_runner.py  tasks.json  verify_prompt.txt
